--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,9 @@
     <header>
         <h1>Leet Translator</h1>
     </header>
+    <div class="imgContainer">
+        <img src="./img/coolcat.jpg" class="img1">
+    </div>
     <main>
         <input type="text" placeholder="Enter text.." class="input1">
         <div class="square1">
