--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leet Translator</title>
     <link rel="stylesheet" href="Styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -14,9 +15,9 @@
         <img src="./img/coolcat.jpg" class="img1">
     </div>
     <main>
-        <input type="text" placeholder="Enter text.." class="input1">
+        <input type="text" placeholder="Enter text.." class="input1" id="userInput">
         <div class="square1">
-            <span class="squareText">TEST TEST</span>
+            <span class="squareText" id="output">TEST</span>
         </div>
     </main>
 <footer>@maggobyte</footer>
