--- a/Index.html
+++ b/Index.html
@@ -15,9 +15,9 @@
         <img src="./img/coolcat.jpg" class="img1">
     </div>
     <main>
-        <input type="text" placeholder="Enter text.." class="input1" id="userInput">
+        <input type="text" placeholder="Enter text.." class="input1" id="userInput" maxlength="500">
         <div class="square1">
-            <span class="squareText" id="output">TEST</span>
+            <span class="squareText" id="output">1337</span>
         </div>
     </main>
 <footer>@maggobyte</footer>
